--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -373,13 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9274a73b75f94b669a8cdc1886c280f9",
+       "model_id": "d5e43332d18d4a15abf3dfbcb042277a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -399,18 +399,19 @@
     "ax1 = study_mice_df.groupby(\"Drug Regimen\").count()[\"Mouse ID\"].plot(kind=\"bar\", title = \"Total Number of Mice for each Treatment(pandas)\",xlim=(-0.25,len(drug_regimen_list)+0.25))\n",
     "ax1.set_ylabel(\"Number\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"images/Figure1.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a278688cff3e4625a5245882c8c22935",
+       "model_id": "3136255f528346b5a8370a1d0e0e86bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,18 +438,19 @@
     "ax2.set_xlim(-0.75,len(drug_regimen_list)-0.25)\n",
     "ax2.set_title(\"Total Number of Mice for each Treatment(pyplot)\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"images/Figure2.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4d07f382073436aa0543fd4b65f0763",
+       "model_id": "e636a1b56b8b46b48608a7398e1a39fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,6 +468,7 @@
     "ax3 = study_mice_df.groupby(\"Sex\").count().plot(y = \"Mouse ID\",kind = \"pie\", startangle = 90, autopct='%1.1f%%', title=\"Distribution of female vs male\" )\n",
     "ax3.set_ylabel(\"\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"images/Figure3.png\")\n",
     "#members = [49, 92, 84, 53]\n",
     "#x_axis = np.arange(0, len(gyms))\n",
     "#colors = [\"yellowgreen\", \"red\", \"lightcoral\", \"lightskyblue\"]\n",
@@ -474,13 +477,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbc802c86ab04f2cb8920e3046e0459c",
+       "model_id": "adb00bbf6257468f90caf7ab2a228b2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -490,16 +493,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Distribution of female vs male')"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -510,7 +503,8 @@
     "plt.figure()\n",
     "plt.pie(sex_numbers,colors=colors, startangle = 90, autopct='%1.1f%%',labels=sex)\n",
     "plt.legend()\n",
-    "plt.title(\"Distribution of female vs male\")"
+    "plt.title(\"Distribution of female vs male\")\n",
+    "plt.savefig(\"images/Figure4.png\")"
    ]
   },
   {
@@ -607,13 +601,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "224805ccbff54ca9a9926d9ec532a2cd",
+       "model_id": "85a969cab6e94c1e88b66b05798d378d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +627,8 @@
     "ax3.set_xticklabels(treatment_list)\n",
     "ax3.set_xlabel(\"Regimen\")\n",
     "ax3.set_ylabel(\"Final Volume(mm3)\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"images/Figure5.png\")"
    ]
   },
   {
@@ -645,13 +640,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d5e509f3fcc4e7ca7cf957e3dca4b75",
+       "model_id": "4b362c6f6b4d49aea8f8eedc54778eef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,18 +665,19 @@
     "capomulin_df.set_index(\"Timepoint\", inplace = True)\n",
     "ax5 = capomulin_df.plot(subplots=True,figsize=(12,12),style = '^-',title =\"Movement of tumor volume as per time point\")\n",
     "plt.ylabel(\"Tumor Volume (mm3)\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"images/Figure6.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d40d922412914f36bd366835619cc42a",
+       "model_id": "1d74c00df9d543189522b4a69269fea3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -710,7 +706,8 @@
     "ax6.set_title(\"Relation of mouse weight and average tumor volume\")\n",
     "ax6.set_xlabel(\"Weight (g)\")\n",
     "ax6.set_ylabel(\"Average Tumor Volume(mm3)\")\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"images/Figure7.png\")"
    ]
   },
   {
