Mark Down added

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -4,12 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Observations and Insights "
+    "# Observations and Insights \n",
+    "## Observation1: the number of samples of each treatment is almost the same. And also the percentage of female and male are almost the same. So the test was conducted to compare the data of each treatment in equal conditions.\n",
+    "## Observation2: We can say apomulin and Remicane are more effective to reduce the tumor volume than Infubinol and Ceftamin from the box plot.\n",
+    "## Observation3: We observed the strong positive correlation between Weight and Average Tumor Volume in Capomulin treatment. The effect of Capomulin is more if weight is lighter. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +156,7 @@
        "4               33.00                 1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +177,7 @@
        "249"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +209,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
        "248"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +344,7 @@
        "4   Ceftamin  52.59   51.78  6.25  0.47"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,13 +376,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5e43332d18d4a15abf3dfbcb042277a",
+       "model_id": "c3bd59b8e0b545dabe9c3d2ddbaea5ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,13 +408,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3136255f528346b5a8370a1d0e0e86bb",
+       "model_id": "52db1ad3bd1c41b7a7ed20bc176c6b0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,13 +447,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e636a1b56b8b46b48608a7398e1a39fa",
+       "model_id": "cbed4280befd4125a486952bd8c386c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -477,13 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adb00bbf6257468f90caf7ab2a228b2c",
+       "model_id": "6231182ae3b84f729cf0d9a5a2678159",
        "version_major": 2,
        "version_minor": 0
       },
@@ -516,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -601,13 +604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a969cab6e94c1e88b66b05798d378d",
+       "model_id": "c5a2e91c6a9445e693418353ae1b83e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,13 +643,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b362c6f6b4d49aea8f8eedc54778eef",
+       "model_id": "199884d6b9634d53bb185770be14cb9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -671,13 +674,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d74c00df9d543189522b4a69269fea3",
+       "model_id": "fa71c2e561e04ed88c43a8f678cc47e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -703,7 +706,7 @@
     "         \n",
     "ax6.plot(x,slope*x +intercept)\n",
     "ax6.text(17,slope*17+intercept-1,'y='+str(round(slope,4)) + 'x +' +str(round(intercept,4)) + \"     R2 =\" +str(round(r_value*r_value,4)))\n",
-    "ax6.set_title(\"Relation of mouse weight and average tumor volume\")\n",
+    "ax6.set_title(\"Relation of mouse weight and average tumor volume(Capomulin)\")\n",
     "ax6.set_xlabel(\"Weight (g)\")\n",
     "ax6.set_ylabel(\"Average Tumor Volume(mm3)\")\n",
     "plt.tight_layout()\n",
@@ -719,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +778,7 @@
        "Weight (g)                        0.84        1.00"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,13 +791,6 @@
     "print(\"Correlation = 0.84\")\n",
     "weight_df.groupby(\"Mouse ID\").mean().corr()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
